# CSPlib

./: .gitmodules  AUTHORS  BUILD.md  LICENSE  README.md
src/: CMakeLists.txt  FindTCHEMPP.cmake  FindTChem.cmake
src/core/: CMakeLists.txt  CSPlib_CommandLineParser.hpp  chem_elem_DAE.cpp  chem_elem_DAE.hpp  chem_elem_DAE_PFR_TChem.cpp  chem_elem_DAE_PFR_TChem.hpp  chem_elem_ODE_TChem.cpp  chem_elem_ODE_TChem.hpp  chem_elem_TCSTRI_TChem.cpp  chem_elem_TCSTRI_TChem.hpp  chem_elem_TCSTR_TChem.cpp  chem_elem_TCSTR_TChem.hpp  eigendecomposition_kokkos.hpp  gODE.cpp  gODE.hpp  index.cpp  index.hpp  indexBatch.cpp  indexBatch.hpp  index_kokkos.hpp  interface_TChem.cpp  interface_TChem.hpp  kernel.cpp  kernel.hpp  kernelBatch.cpp  kernelBatch.hpp  kernel_kokkos.hpp  model.cpp  model.hpp  tools.cpp  tools.hpp  tools_tines.hpp  util.hpp
src/example/: CMakeLists.txt
src/example/build_example/: master_bld
src/example/eigentest/: CMakeLists.txt  main-eigentest.cpp  test-check.hpp  test-kokkos.hpp  test-magma.cpp  test-magma.hpp  test-matrix.hpp  test-mkl.hpp
src/example/gODE/: CMakeLists.txt  driverODE_DavisSkodjeK.cpp  driver_gODE_Davis_Skodje.cpp  driver_gODE_Davis_Skodje_K.cpp  helperDavisSkodjeK.hpp
src/example/indexODETChem/: CMakeLists.txt  runODETChemK.cpp  run_ODE_TChem_EigenK.cpp  run_index_ODE_TChem.cpp
src/example/indexPFR_TChem/: CMakeLists.txt  run_index_PFR_TChem.cpp
src/example/indexTCSTRTChem/: CMakeLists.txt  runTCSTRI_TChem.cpp  run_index_TCSTR_TChem.cpp
src/example/runs/Davis_Skodje/: Plot_Davis_Skodje.ipynb  run.sh
src/example/runs/Davis_Skodje/.ipynb_checkpoints/: Plot_Davis_Skodje-checkpoint.ipynb
src/example/runs/Davis_Skodje_KEigenSolver/: run.sh
src/example/runs/GRI3/: csp_analysis_gas-gri3.ipynb  run.sh
src/example/runs/GRI3_KEigenSolver/: run.sh
src/example/runs/GRI3_ign/: csp_analysis_gas-gri3.ipynb  run.sh
src/example/runs/TCSTR/: delete.sh  runAll.sh  run_csp.sh
src/example/runs/scripts/: CSPindexHelper.py  compareFiles.py
src/example/stiffnessFactor/: CMakeLists.txt  DriverStiffnessFactor.cpp
src/example/tinesEigensolver/: CMakeLists.txt  runTinesEigensolver.cpp
src/include/: CSPlib_ConfigDefs.h.in  vio.h
src/markdown/: README.md  TChemODE.md  TodoList.md  api.md  cstr.md  front.html  front.md  front.mdpp  gODE.md  intro.md  methodology.md  summary.md
src/test/: CMakeLists.txt
src/test/chem_elemODETChem/: CMakeLists.txt  driver_model_ODE_TChem2.cpp
src/test/gDAE/: CMakeLists.txt  driver_gDAE.cpp
src/test/gODE/: CMakeLists.txt  driver_gODE.cpp
src/test/index_kokkos/: CMakeLists.txt  index_batch.cpp  index_kernel_batch.cpp  index_kokkos.cpp  index_kokkos_v2.cpp
src/test/kernel_kokkos/: CMakeLists.txt  kernel_kokkos.cpp
src/test/tests/ModelTChem/: runTest.sh
src/test/tests/ODETChem/: runTest.sh
src/unit-test/: CMakeLists.txt
src/unit-test/ODETChem/: CMakeLists.txt  CSPlib_Test_Driver_ODETChem.cpp
src/unit-test/T-CSTR/: CMakeLists.txt  CSPlib_Test_Driver_TCSTR.cpp
src/unit-test/T-CSTR/outputs_ref/: kmod.echo  kmod.list  kmod.out  kmod.reactions  kmodSurf.echo  kmodSurf.list  kmodSurf.out  kmodSurf.reactions
