PROJECT (CSPlib)

ADD_SUBDIRECTORY (gODE)
IF (NOT KOKKOS_ENABLE_CUDA)
  ADD_SUBDIRECTORY (stiffnessFactor)
ENDIF()

IF (CSPlib_ENABLE_TCHEMPP)
  ADD_SUBDIRECTORY (indexODETChem)
  ADD_SUBDIRECTORY (indexTCSTRTChem)
  ADD_SUBDIRECTORY (indexPFR_TChem)
ENDIF()

IF (CSPlib_ENABLE_KOKKOS)
  ADD_SUBDIRECTORY (eigentest)
ENDIF()

INSTALL(DIRECTORY runs data
        DESTINATION ${CMAKE_INSTALL_PREFIX}/example)
